--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,4 +13,11 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"/>
 
+	<ProgressBar
+		android:id="@+id/progress_bar"
+		android:layout_centerInParent="true"
+		style="@android:style/Widget.Holo.Light.ProgressBar.Large"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
 </RelativeLayout>
